# engineering-onboarding-copilot

./: .gitignore  CAPSTONE_SUBMISSION_LINKS.md  DESIGN_AND_TESTING.md  README.md  render-build.sh  test_production.sh
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  .gitignore  README.md  conftest.py  manual_verify_confidence.py  prove_pipeline_simple.py  pyproject.toml  pyrightconfig.json  requirements-deploy.txt  requirements.txt  test_database_setup.py  test_edge_cases.py  test_edge_cases_output.txt  test_fallback_refactored.py  test_gap_integration.py  test_gap_service.py  test_rag_pipeline.py
backend/app/: __init__.py  main.py
backend/app/models/: __init__.py  database.py  gap.py
backend/app/routes/: gaps.py  sources.py
backend/app/services/: __init__.py  gap_service.py  rag_service.py  vector_store.py
backend/app/utils/: __init__.py  logging.py
docs/: INDEX.md  TRELLO_SETUP_GUIDE.md  design-proposal.md
docs/delivery/: INTERVIEW_PREP.md  REPOSITORY_STRUCTURE.md
docs/evaluation/: DEMO_SCRIPT.md  EVALUATION_AND_DEMO.md  sprint-2-edge-cases.md  sprint-3-formal-evaluation.md
frontend/: .env.local.example  package-lock.json  package.json
synthetic-docs/: 1-getting-started.md  10-code-review-guidelines.md  11-git-workflow.md  12-environment-configuration.md  13-troubleshooting.md  14-api-authentication.md  15-performance-optimization.md  2-architecture-overview.md  3-testing-guide.md  4-deployment.md  5-api-reference.md  6-ci-cd-pipeline.md  7-database-setup.md  8-security-practices.md  9-monitoring-observability.md
(+30 files in other folders)
